Plumbed passives through SpeculativeProjection
-this change is only big because the API change influences many tests but the logic is just plumbing the passives through the SpeculativeProjection, into the ShadowState, and through the IProjectionListener
-of special note here is the the ShadowState also applies PassiveUpdate to PartialPassive in order to create the updated PartialPassive instance